Fix hours container spacing on mobile

--- a/src/components/Hours/Hours.css
+++ b/src/components/Hours/Hours.css
@@ -56,7 +56,7 @@
   }
 
   .hours-container h1 {
-    font-size: 3.5rem;
+    font-size: 3rem;
   }
 
   .hours-content {
@@ -65,6 +65,6 @@
   }
 
   .hours-content h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 }
